--- a/scss/element/_form_effect.scss
+++ b/scss/element/_form_effect.scss
@@ -226,7 +226,8 @@ textarea:focus ~ .label-floating,
 textarea:not(:focus):valid ~ .label-floating {
   top: -5em;
   bottom: 1em;
-  color: #00aeef;
+  color: #{$focus_border_color};
+  font-family: inherit;
   left: 1.5em;
   font-size: .75em;
   opacity: 1;
@@ -253,7 +254,7 @@ input:focus ~ .label-floating,
 input:not(:focus):valid ~ .label-floating {
   top: -1.5em;
   bottom: 1em;
-  color:#{$focus_border_color};
+  color: #{$focus_border_color};
   font-family: inherit;
   left: 1.5em;
   font-size: .65em;
