--- a/scss/element/_global.scss
+++ b/scss/element/_global.scss
@@ -135,9 +135,9 @@ abbr[title] {
   cursor:help;
 }
 
-figure {
-  margin: 1em 40px;
-}
+// figure {
+//   margin: 1em 40px;
+// }
 
 ins {
     background-color:#ff9;
