--- a/scss/element/_table.scss
+++ b/scss/element/_table.scss
@@ -15,12 +15,12 @@ tr {
 }
 
 caption {
-    margin-top: 1em;
-    padding-bottom: 1em;
+    // margin-top: 1em;
+    // padding-bottom: 1em;
     text-align: left;
-    margin-top: 3em;
-    text-transform: uppercase;
-    letter-spacing: .1em;
+    // margin-top: 3em;
+    // text-transform: uppercase;
+    // letter-spacing: .1em;
 }
 
 th,
